src/objects/maps__ScheduledJob__c.object
<CustomObject>
    <fields>
        <fullName>maps__ApexClassName__c</fullName>
        <label>Apex Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__BaseObject__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object</label>
        <referenceTo>maps__BaseObject__c</referenceTo>
        <relationshipLabel>Maps Scheduled Jobs</relationshipLabel>
        <relationshipName>ScheduledJobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__JobId__c</fullName>
        <label>JobId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Scheduled Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>